- small improvements for examples and tutorials
Imported from NetOffice r89533
https://netoffice.codeplex.com/SourceControl/changeset/89533

--- a/ExampleBase/ExampleBase/FormBase.resx
+++ b/ExampleBase/ExampleBase/FormBase.resx
@@ -237,6 +237,30 @@
         SUVORK5CYII=
 </value>
   </data>
+  <data name="pictureBox3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        /9j/4AAQSkZJRgABAQEAYABgAAD/2wBDAAgGBgcGBQgHBwcJCQgKDBQNDAsLDBkSEw8UHRofHh0aHBwg
+        JC4nICIsIxwcKDcpLDAxNDQ0Hyc5PTgyPC4zNDL/2wBDAQkJCQwLDBgNDRgyIRwhMjIyMjIyMjIyMjIy
+        MjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjL/wAARCAAgACADASIAAhEBAxEB/8QA
+        HwAAAQUBAQEBAQEAAAAAAAAAAAECAwQFBgcICQoL/8QAtRAAAgEDAwIEAwUFBAQAAAF9AQIDAAQRBRIh
+        MUEGE1FhByJxFDKBkaEII0KxwRVS0fAkM2JyggkKFhcYGRolJicoKSo0NTY3ODk6Q0RFRkdISUpTVFVW
+        V1hZWmNkZWZnaGlqc3R1dnd4eXqDhIWGh4iJipKTlJWWl5iZmqKjpKWmp6ipqrKztLW2t7i5usLDxMXG
+        x8jJytLT1NXW19jZ2uHi4+Tl5ufo6erx8vP09fb3+Pn6/8QAHwEAAwEBAQEBAQEBAQAAAAAAAAECAwQF
+        BgcICQoL/8QAtREAAgECBAQDBAcFBAQAAQJ3AAECAxEEBSExBhJBUQdhcRMiMoEIFEKRobHBCSMzUvAV
+        YnLRChYkNOEl8RcYGRomJygpKjU2Nzg5OkNERUZHSElKU1RVVldYWVpjZGVmZ2hpanN0dXZ3eHl6goOE
+        hYaHiImKkpOUlZaXmJmaoqOkpaanqKmqsrO0tba3uLm6wsPExcbHyMnK0tPU1dbX2Nna4uPk5ebn6Onq
+        8vP09fb3+Pn6/9oADAMBAAIRAxEAPwD03xt4tn0hk0jSU3atcReZ5rrlLePJG/8A2mJBAHTjJ4wG8wk8
+        IR3N1cajdRJPe3MhlmmdB87E5Jx06k9q2PGD2Nn401y+uJDFJHLFtePG/d5EeAB3z6Hj1rNOuXGvQIu5
+        I4yv3EyFOMZLdTxkZHOMjGcgnrwWJpK8JNRau7vsgzXA1qFCOJinKDS+Ta/LzMePTb6LUxDod3Lb3bqU
+        L2cpiITIJyyY44HX0Fe1+HNfu5riPTNVMb3JiBiuUAQTFQNwK9n6txwRngYrjvDJ06G3e3gx9qJy7sMN
+        J6fTHp/9et6zEi6pavCG3rMn3U3EAsFbjH90tk9hk187js8nWx0YQVoLTzfn/kdWAwtOWFc27tr7v66n
+        N/G2wgebRrpIyLuXfE8hlIURrzjbg5OW65HU5zxjhtPZbW3McQJzy7Ack+9d58YtQtpGt7WO1knuLQbp
+        JlkXy4d5XCuuCSSBnquNynndiuE0VcqZLVRbTEbztQAkZxkHHqCPfB9DWteMHUdznzCGZPBxdRv2Celr
+        b+et/S5f0/TtY1a7A0u3maRWUGRAcRkngk9unX29q9o8M6VfWdsJNVEBu8AAxHORgckY+Vs5GASO+ecD
+        yvTtU8WC8h+w6hdSlCdomkLRDAwcg8EAH9R3xXp2ja3eEQQagySzuQruuECkgAYzjIznPcluB0AyhUwc
+        Zx5vi6HLltOq4ScL269j/9k=
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
