[Regular Commit] - improve Wikipedia Search Addin example   (run search async to avoid UI freeze)
Imported from NetOffice 113017
https://netoffice.codeplex.com/SourceControl/changeset/113017
Legacy NetOffice Git repository commit a2d610a0dc92e7848b648c025d45ea632fa3684e

--- a/Other/Word Addin - Search Wikipedia/Search Wikipedia/WikipediaPane.resx
+++ b/Other/Word Addin - Search Wikipedia/Search Wikipedia/WikipediaPane.resx
@@ -170,4 +170,7 @@
         O/7RWWI/EoMZ4HCn/t9hwR9/0zIDx3iUuwAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="backgroundWorker1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
