--- a/AddinRemovalTool/AddinRemovalTool/Form1.resx
+++ b/AddinRemovalTool/AddinRemovalTool/Form1.resx
@@ -118,6 +118,65 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="buttonExit.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAAg9JREFUOE9j0K/d
+        +V8uquM/AxCQwwbpIxuALQbZSrYJII0w55NjCIblrHqBCxkMgv8y6IX8x4qBcmA1UIDmBQcWFpOwf4Ub
+        H/yv23b/f81WVAwSK9r08D+Lafg/BgYHFriLEV5wYGGziv9ft+vp/+YdD/437bj/v2vPAzgGiTXsfvaf
+        zTLuv7CwH9gAu7a9SOHn4MDCbZP+v3Hfm/+1O578b9n99P/UI8//93sG/p957Pn/jn1P/zftf/vfPL7p
+        v21ODkursPDRgqkbkWIBaACPU97/KWe//+898uH/lOPv/0/09P9/r7Dwf4+29v8VFz78X3bl2/+Y+jn/
+        W0VEvl3y9//fzMV1FBELQAP4Pcv/b3709//q29/+r7/95f+e+1/+d6tr/L+TlfW/T0np/9kXP/73SEj+
+        v+Dm9r+Zm/tb3dqLqF4QCWj8d+nP//8XfgDx9///L3/79//mtz//++Tk/j8IC/s/QVj4/20zs/9dLCy/
+        QWFgnDkJNSFJBNUvFAvv+CsS3vFfJKwdjAOblv2vXbD7/0Qenv+vzc3/T+XiQk14xCQkkI3PgTbP5uX9
+        911T8/9kdnawC5w69hFOxQ2MjN+u6Or+nwDVNIOT8/dLoJc6mJm/BTcswp8XgJqPgjQ3MzF9Q07qXays
+        36CGIGIBPSvrpU4AO69W3eB/48Jd8OwODjggaNYw+u9fu+A/ADq8VA/QYye/AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="buttonRemove.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAA35JREFUOE9dk+1P
+        k1cYxh8TZ4b7YPwD9mkZ23C2WwstymSLdeVlW3EOK2zA5MWtjq2EGFG0oEWRF9vystnS5yktbTMz4opY
+        mAxIFyhFWl5KYcASAbEtYmUsWQWFQOi1Yz8swknunHPuk+t3rjvnPjuobUNnNEavPVuT7Nq5U7Bn757X
+        KQo7gsFl//rGxh8Rr0Roc/OyXNs14b1SadndoDc0/nL7TshkMsNcXw/D1atolMthVqnwItd8py2k0TcZ
+        dQzz2haIQa+PUDZo7ZaOTtAlJeitqMCYRoORmhoMlJXBXlyM9vx8qM+cgaWzG0o1c69R9xJExZi0t7ps
+        0EulcMpkGCIid1UV3NeuYfDSJfQToe3kSdhOnYI2Kwu3um1Q0UZD2EUV3cTW/mrdNJZdgaOgAMuPHmHZ
+        78df5PZxAvOcPYsxMi86nVhfXYWjsBD68+dBt1hD13XGaKq0XnPj545utKenYYAA/vF6EQwE8PzJE3hr
+        a7HQ3IzVpaVwrq+6Gp2JibAIBLjZ0YXSugaGkqnpqRajGXaxGIPEZk9mJsa0WgQJaJVAgjMz8Nps6IqP
+        xwAR9otE6CazhTGgRK2boeR604pVWQMHOfBkZMBz6AMMst9F4F4/VhYWEPT5MJTyGUZjuBjicNDHZsNO
+        ALflZbhiurlBFdXdWLmrqoUrORnDfD7cnPcQdPTh6bwfc+1W/PtgFiv372MyQYDRA3wM83joi41F22U5
+        zv2oXqdyioqnrE1muLhcjLD2I6BjwuKAexjjSR/BLcnBMqk/2NsLD4+L8cQEOImTNlqH3GLZNJUm+e4n
+        2tIKO7E2KfoUzxcX8fTxAqZOZ8P/9RfwfXkUk+WX8Wzpb8xXlmMqRRQug2lpRdq3+TR1IkfC+ur7gs0e
+        hRKj3PfhJ/a9rRbMHkvCfF46iTRMpwjh/f0u1sgTT/Ci0VtZhSxpYSg19zQ33AuJqamaoopKuKQ/wMll
+        w5MkwIP0z+HLPgG/JBM+STYmsjMw9E0eXBIJLlRfR/Kx443/t7NQKHw1TnCkR3pRBlddHSY+ScCc+Cge
+        ZorDMZcqwp/CwxhUKlBYUoq4wwIHX3x895b/8GF8fETMgTiagDbLFQq0kyYaUSnC8RtZVyhVOHTk4xDv
+        4EF9LJ+/VfwyicVicd6JitK+ERk5Hblv38aLePOtt2cjo6IYDocTs/0r/wck4z4WZ8TJhAAAAABJRU5E
+        rkJggg==
+</value>
+  </data>
+  <data name="buttonRefresh.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAA31JREFUOE9103tM
+        01cUB/ASJ1AegoXNPidVZosWFgsIdMhLXsVWXrY8B23ZhCG0wioVOiitSmgRV8MEpYtjcfXBCiNZgm7M
+        vRIYoFsGOhMH27LEZJpJNiJi+cn63Q+M3TTx/nVv7jmfk9xzrgflmfVqtS1+8f5cc3AQTeSx7PR66CRm
+        lz3W2JZu+3b/fGnf0rPx7nNcgz0mcn/PSGbbMDpG5+H4FTBNAPJPCcSax8BXdkyHlplf2Vx0tIKec6jQ
+        nSgoPOoZVdvbl2QYchU77sE87kT75D9QDBOQf7KALPscEs/cQdzxaWwqbF0Or7eDnasfcwPCqhPHFWd+
+        gHLoLwh0Q+BpB7FVPwLxyR9R5JhD7tnbyLDNILrzOoTma9hu/h5MifaOG4ip6fnz2CQBQXUv2KWdeLnc
+        CkZGNUEvNCO6cRCyD3+BuOc60qzXsK3lCsJInC7VuujpOr9VJLb2Pagds2CVvYst2gGwZIbFDbvrQmlJ
+        qlleuQXJnd8h3jKKLOsYktu+wKa6Abwo1SEgqSJyFeCXmhbetN8Eu7gddHHtA+aet0PpWer3eTV92PvB
+        LbLyOKINnyHBdBli8+fgvnUWwRISeO31klXgpcwaByenYZKzt8WVoLUhJOcgQvIbXQGiYrDkRnCU3dhW
+        349wbT/imvqR0jIAmqQJVGH+4adayi4wEXmWYfjGlsI7/g14i1TwjCqCd7Qc/jtkznUJKsIvpRrrUjUI
+        SFXDJzJ3yk+kyHAj3KIji6Xd32CD+AD8yQDqrnpQxXpQReUur3BpK0WY6PmCQJxGjZBMBKdWYYvGDmb2
+        ob/dQEiBcb6y7yrWp9eBntcCf0kzAuUWrE/b7wpKVHUxMtVejBwth5Xd+DDGegN8w9cISqm86wY2yt65
+        pzk3BZ90LWi5JrIrZDtVp7FR0w+OogtsWStBDhKR/NE8+M0jCCTfwScyr8sNcPL1f+gcNxAo1WPn4ctg
+        V9jAq/8YYU2XENE2jqiuGRhHH0Fz8Sf4kkW8wrPGKIKSx7OwspjZut9iqjoWaSlVg1zlCaR3T0No+hLC
+        9gns7JmB9PwcBn8HdlR2Yg0v9VtKRNp/ySsAq6QtjFlg3Lqy58hMdZtV1qUM2yyUw06orxA4dRM4eGEK
+        a7dnf0VhyHye+yufXHDlBj5rT4OdKzfe5Sss4Je1L7Dy9L0Msd73/8n/AhG+sLq2EDPaAAAAAElFTkSu
+        QmCC
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
